# ASOS

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .env.prod  .gitignore  Dockerfile  README.md  alembic.ini  hello.py  locustfile.py  pyproject.toml  requirements.txt  test.py
backend/app/: __init__.py  config.py  dependencies.py  main.py  seed.py
backend/app/helpers/: s3_connect.py
backend/app/middlewares/: is_admin.py  session.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 35f122a9b6a4_migrations.py  4992b80dc3bc_init.py  50c9d72498b0_init.py  b881c07fd16f_migrations.py
backend/app/models/: brand.py  cart.py  category.py  order.py  product.py  users.py
backend/app/routers/: auth.py  brands.py  cart.py  categories.py  products.py  users.py
frontend/: .gitignore  Dockerfile  README.md  components.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  typed-router.d.ts  vite.config.ts
frontend/e2e/: test-add-cart.ts  test-search.ts  vue.spec.ts
frontend/public/: app.webmanifest
frontend/src/: App.vue  i18n.ts  main.ts  router.ts
frontend/src/assets/: main.css
frontend/src/components/: AdminNavBar.vue  FilterSidebar.vue  ProductSearch.vue  ProductTile.vue
frontend/src/composables/: useDialog.ts  useQuery.ts
frontend/src/lib/: client.ts  rules.ts  useQuery.ts  utils.ts
frontend/src/locales/: en.json
frontend/src/pages/: index.vue
frontend/src/stores/: auth.ts  cart.ts
frontend/src/types/: api.ts
infrastructure/seaweedfs/: filer.toml  s3.config.json
(+52 files in other folders)
